# uor-msc-dissertation-xai-african-storms

./: .gitignore  LICENSE  README.md  environment.yml  experiments_summary.csv  pyproject.toml  requirements.txt
report/: CS_report.sty  README.md  main.tex  references.bib  thesis.tex
report/chapters/: 00_i_abstract.tex  01_introduction.tex  02_literature.tex  03_methodology.tex  04_results.tex  06_conclusions.tex  abstract.tex  acknowledgments.tex  appendix_A.tex  background.tex  conclusion.tex  data.tex  declaration.tex  discussion.tex  glossary.tex  introduction.tex  methodology.tex  nomenclature.tex  results.tex
report/chapters/appendices/: exploration.tex  modelresults.tex
src/: climatology.py  config.py  create_dataset.ipynb  create_dataset.py  create_figures.ipynb  create_figures.py  eval_exps.py  explain.ipynb  explore.ipynb  raw_data_explore.ipynb  run_exp.py  run_experiments.py  run_exps.sh  train_model.py  train_model_sweep.py
src/json_config/: hyperparameters.json  train_parameters.json
src/training_config/: train_parameters.json
src/utils/: experiments.py  explaining.py  modelling.py  plotting.py  processing.py
